--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.2.4",
+    "next": "13.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.60.0"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
